# youtube-analytics-project

./: pyproject.toml
homework-2/: moscowpython.json
homework-5/: main.py
homework-6/: main.py
src/: channel.py  playlist.py  video.py
